--- a/css/gallery.css
+++ b/css/gallery.css
@@ -251,6 +251,8 @@ html.clicked {
 
     .gallery img {
         width: 300px;
+        height: 300px;
+        max-height: 300px;
         margin: 15px;
     }
 
