--- a/css/gallery.css
+++ b/css/gallery.css
@@ -214,10 +214,10 @@ html.clicked {
 /* Desktop */
 @media screen and (min-width: 1025px) {
 
-    #home-h {
-        -webkit-transform: translateY(50px);
-        -ms-transform: translateY(50px);
-            transform: translateY(50px);
+    .landing-text h1 {
+        -webkit-transform: translateY(15px);
+        -ms-transform: translateY(15px);
+            transform: translateY(15px);
     }
 
     #hero {
@@ -229,7 +229,7 @@ html.clicked {
     <--- -------------------------- -*/
 
     #landing-page {
-        min-height: 550px;
+        min-height: 500px;
     }
 
     .gallery {
