--- a/css/about.css
+++ b/css/about.css
@@ -16,7 +16,7 @@ html, body {
 .landing-text h1 {
     padding: 0 0 0 20px ;
     border-left: 5px solid var(--primary);
-    width: 1100px;
+    width: auto;
 }
 
 #landing-page p {
@@ -696,6 +696,7 @@ html, body {
 
     .landing-text h1 {
         font-size: 60px;
+        width: 1100px;
     }
 
     .clippy-desktop {
