--- a/css/gallery.css
+++ b/css/gallery.css
@@ -215,9 +215,10 @@ html.clicked {
 @media screen and (min-width: 1025px) {
 
     .landing-text h1 {
+        font-size: 55px;
         -webkit-transform: translateY(15px);
-        -ms-transform: translateY(15px);
-            transform: translateY(15px);
+            -ms-transform: translateY(15px);
+                transform: translateY(15px);
     }
 
     #hero {
