fixed tablet promotions icon

--- a/css/root-styles.css
+++ b/css/root-styles.css
@@ -757,7 +757,8 @@ nav img {
         height: 110px;
     }
 
-    .contact-li {
+    .services-li .icon-drop {
+        right: -8px;
     }
 
     /*-- -------------------------- -->
