--- a/css/gallery.css
+++ b/css/gallery.css
@@ -225,10 +225,6 @@ html.clicked {
                 transform: translateY(13px);
     }
 
-    #hero {
-        background-attachment: fixed;
-    }
-
     /*-- -------------------------- -->
     <---          GALLERY           -->
     <--- -------------------------- -*/
@@ -286,6 +282,7 @@ html.clicked {
     }
 
     .clippy-desktop {
+        height: 80px;
         -webkit-clip-path: polygon(71% 50%, 100% 0, 100% 100%, 0 100%, 0 0);
                 clip-path: polygon(71% 50%, 100% 0, 100% 100%, 0 100%, 0 0)
     }
