moved landing text on home page with 35px to the left

--- a/css/style.css
+++ b/css/style.css
@@ -1670,6 +1670,7 @@ i.fas.fa-chevron-right {
         width: 900px;
         left: 0;
         top: -45px;
+        padding-left: 35px;
     }
 
     .landing-text h1 {
