--- a/css/root-styles.css
+++ b/css/root-styles.css
@@ -1324,7 +1324,7 @@ footer {
 }
 
 .footer-location-info p {
-    width: auto;
+    width: 220px;
 }
 
 .footer-item h3 {
@@ -1408,6 +1408,10 @@ footer {
         -ms-flex-align: flex-start;
             align-items: flex-start;
     margin-bottom: 20px;
+}
+
+.footer-location-info p {
+    width: 250px;
 }
 
 .branding-line {
