--- a/css/gallery.css
+++ b/css/gallery.css
@@ -76,13 +76,26 @@
 }
 
 .modal i {
-    height: auto;
     color: #fff;
-    font-size: 1.875em;
+    font-size: 1.375em;
+    position: absolute;
+    z-index: 2000;
+}
+
+.modal button {
+    background: transparent;
+    border: none;
+    width: 30px;
+    height: 30px;
+    color: #fff;
+    font-size: 1.375em;
     position: absolute;
     top: 20px;
     right: 20px;
     z-index: 2000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .modal i:hover {
