--- a/css/materials.css
+++ b/css/materials.css
@@ -214,6 +214,44 @@ p {
 }
 
 .image-box {
+    position: relative;
+    margin: 30px;
+}
+
+.yellow {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transition: .3s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.yellow:hover  {
+    background: var(--primary);
+    opacity: .7;
+    transition: .3s ease;
+    cursor: pointer;
+}
+
+.yellow a {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.yellow:hover .image-box {
+    background: var(--primary);
+    opacity: 1;
+    transform: scale(1.2);
+}
+
+.image-box {
     box-sizing: border-box;
     height: 300px;
     width: 300px;
@@ -230,10 +268,6 @@ p {
 #partners img {
     width: 200px;
     margin: 25px auto;
-}
-
-#partners img:hover {
-    pos
 }
 
 #contact {
@@ -381,8 +415,41 @@ p {
     }
 
     .image-box {
-        margin: 40px;
-        max-width: 770px;
+        position: relative;
+        margin: 30px;
+    }
+
+    .yellow {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        transition: .3s ease;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .yellow:hover  {
+        background: var(--primary);
+        opacity: .7;
+        transition: .3s ease;
+        cursor: pointer;
+    }
+
+    .yellow a {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        z-index: 1000;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .yellow:hover .image-box {
+        background: var(--primary);
+        opacity: 1;
+        transform: scale(1.2);
     }
 
 }
