--- a/css/maps.css
+++ b/css/maps.css
@@ -6,7 +6,7 @@
 
 #landing-page {
     min-height: 300px;
-    background:url("../images/rebar-2.jpg");
+    background:url("../images/maps-bg.jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
