--- a/css/maps.css
+++ b/css/maps.css
@@ -1,4 +1,3 @@
-/* prefixed by https://autoprefixer.github.io (PostCSS: v7.0.23, autoprefixer: v9.7.3) */
 
 /*-- -------------------------- -->
 <---           LANDING          -->
@@ -63,6 +62,10 @@
     padding-bottom: 50px;
 }
 
+.pipe {
+    padding-top: 0 !important;
+}
+
 #about-rebar img {
     width: 100%;
     position: relative;
@@ -77,6 +80,10 @@
     position: relative;
     padding-top: 50px;
     line-height: 1em;
+}
+
+.group2 h2 {
+    margin-top: -20px;
 }
 
 .rebar-group h2 span {
@@ -104,6 +111,26 @@
     top: 69px;
 }
 
+.group2 h2:before {
+    content: '';
+    position: absolute;
+    background: var(--primary);
+    width: 50px;
+    height: 2px;
+    left: 217px;
+    top: 60px;
+}
+
+.group2 h2:after {
+    content: '';
+    position: absolute;
+    background: var(--primary);
+    width: 30px;
+    height: 2px;
+    left: 217px;
+    top: 69px;
+}
+
 .rebar-group h2 {
     text-align: left;
 }
@@ -114,6 +141,7 @@
 
 .examples {
     text-align: center;
+    padding-top: 50px;
 }
 
 .examples h2 {
@@ -131,7 +159,8 @@
 }
 
 .seal {
-    box-shadow: 0px 0px 11px 0px rgb(0 0 0 / 21%);
+    -webkit-box-shadow: 0px 0px 11px 0px rgb(0 0 0 / 21%);
+            box-shadow: 0px 0px 11px 0px rgb(0 0 0 / 21%);
     width: 300px;
     margin: auto;
     border-radius: 5px;
@@ -492,6 +521,9 @@
     .stat-item p {
         height: 175px;
     }
+    .examples {
+        padding-top: 28px;
+    }
     .examples h2 {
         width: 100%;
     }
@@ -511,8 +543,13 @@
         width: 45%;
     }
 
+    .pipe {
+        padding-bottom: 100px !important;
+    }
+
     .seal {
-        box-shadow: 0px 0px 11px 0px rgb(0 0 0 / 21%);
+        -webkit-box-shadow: 0px 0px 11px 0px rgb(0 0 0 / 21%);
+                box-shadow: 0px 0px 11px 0px rgb(0 0 0 / 21%);
         width: 300px;
         margin: auto;
         border-radius: 5px;
@@ -716,15 +753,21 @@
                 flex-direction: row;
         -webkit-box-pack: justify;
             -ms-flex-pack: justify;
-                justify-content: space-between;
-        padding: 120px 0;
+                justify-content: space-around;
+        padding: 120px 0 0;
     }
 
     #about-rebar img {
         width: auto;
         height: auto;
-        align-self: flex-start;
+        -ms-flex-item-align: start;
+            align-self: flex-start;
         margin-top: 70px;
+    }
+
+    #about-rebar #group2 {
+        width: auto;
+        margin-top: 100px;
     }
 
     .rebar-group {
@@ -736,6 +779,14 @@
         left: 150px;
     }
 
+    .group2 h2:before {
+        left: 217px;
+    }
+
+    .group2 h2:after {
+        left: 217px;
+    }
+
     .examples h2 {
         width: 100%;
     }
@@ -745,6 +796,11 @@
     }
     .examples {
         text-align: center;
+        padding-top: 120px;
+        padding-bottom: 100px;
+    }
+
+    .group2 {
         margin-bottom: 100px;
     }
 
@@ -755,7 +811,8 @@
     }
 
     .seal {
-        box-shadow: 0px 0px 11px 0px rgb(0 0 0 / 21%);
+        -webkit-box-shadow: 0px 0px 11px 0px rgb(0 0 0 / 21%);
+                box-shadow: 0px 0px 11px 0px rgb(0 0 0 / 21%);
         width: 300px;
         margin: auto;
         border-radius: 5px;
@@ -779,12 +836,16 @@
         padding: 15px 0;
         text-decoration: none;
         font-size: 20px;
+        -webkit-transition: .2s ease;
+        -o-transition: .2s ease;
         transition: .2s ease;
     }
 
     .seal a:hover {
         background: #000;
         color: #fff;
+        -webkit-transition: .2s ease;
+        -o-transition: .2s ease;
         transition: .2s ease;
     }
 
