--- a/css/maps.css
+++ b/css/maps.css
@@ -734,6 +734,7 @@
         width: 550px;
         padding: 0 20px;
         text-align: left;
+        margin-left: 10%;
     }
 
     /*-- -------------------------- -->
@@ -754,15 +755,16 @@
         -webkit-box-pack: justify;
             -ms-flex-pack: justify;
                 justify-content: space-around;
-        padding: 120px 0 0;
+        padding: 120px 15px 0;
     }
 
     #about-rebar img {
-        width: auto;
+        width: 450px;
         height: auto;
         -ms-flex-item-align: start;
             align-self: flex-start;
         margin-top: 70px;
+        margin-right: 50px;
     }
 
     #about-rebar #group2 {
@@ -771,7 +773,7 @@
     }
 
     .rebar-group {
-        width: 620px;
+        width: 520px;
     }
 
     .rebar-group h2:before,
@@ -860,6 +862,7 @@
     #rebar-stats {
         height: 1000px;
         background-attachment: fixed;
+        padding-bottom: 200px;
     }
 
     #rebar-stats h2 {
@@ -873,6 +876,27 @@
         color: #f5f3f3;
         text-align: center !important;
         width: 800px;
+    }
+    
+    #rebar-stats h2 span {
+        color: var(--primary);
+    }
+
+    .stat-group {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+        padding-bottom: 250px;
+        width: 600px;
     }
     
     #rebar-stats h2 span {
@@ -1006,5 +1030,19 @@
 
     .pipe {
         max-width: 1100px !important;
+    }
+
+    .stat-group {
+        width: 1200px;
+        max-width: 1200px !important;
+        padding-bottom: 0;
+    }
+
+    #rebar-stats {
+        padding-bottom: 0px;
+    }
+
+    .landing-text h1 {
+        margin-left: 0;
     }
 }
