--- a/css/root-styles.css
+++ b/css/root-styles.css
@@ -6,7 +6,9 @@ body, html {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
+    scroll-behavior: smooth;
 }
+
 
 @font-face {
     font-display: swap;
