--- a/css/maps.css
+++ b/css/maps.css
@@ -1113,6 +1113,8 @@ label {
     font:400 12px/16px "Open Sans", Helvetica, Arial, sans-serif; 
     font-size: 30px;
     font-weight: bold;
+    display: block;
+    margin-top: 50px;
 }
 
 form p{
